--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker build -t my-docker-image .
+        run: docker build -t devsecops-testing .
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
@@ -24,5 +24,5 @@ jobs:
 
       - name: Push Docker image to Docker Hub
         run: |
-          docker tag my-docker-image ${{ secrets.DOCKER_USERNAME }}/my-docker-image:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/my-docker-image:latest
+          docker tag my-docker-image ${{ secrets.DOCKER_USERNAME }}/devsecops-testing:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/devsecops-testing:latest
