--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,5 +24,5 @@ jobs:
 
       - name: Push Docker image to Docker Hub
         run: |
-          docker tag my-docker-image ${{ secrets.DOCKER_USERNAME }}/devsecops-testing:latest
+          docker tag devops-testing ${{ secrets.DOCKER_USERNAME }}/devsecops-testing:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/devsecops-testing:latest
