--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,19 +10,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
+      
+    - name: Build Docker image
+      run: docker build -t devsecops-testing .
 
-      - name: Build Docker image
-        run: docker build -t devsecops-testing .
+    - name: Install Trivy
+      run: |
+        wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+        echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
+        sudo apt-get update && sudo apt-get install -y trivy
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Scan Docker image
+      run: trivy devsecops-testing
 
-      - name: Push Docker image to Docker Hub
-        run: |
-          docker tag devsecops-testing ${{ secrets.DOCKER_USERNAME }}/devsecops-testing:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/devsecops-testing:latest
+    - name: Push Docker image to Docker Hub
+      run: |
+        docker tag devsecops-testing ${{ secrets.DOCKER_USERNAME }}/devsecops-testing:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/devsecops-testing:latest
