--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,7 +23,7 @@ jobs:
         sudo apt-get update && sudo apt-get install -y trivy
 
     - name: Scan Docker image
-      run: trivy devsecops-testing
+      run: trivy image devsecops-testing
 
     - name: Push Docker image to Docker Hub
       run: |
