--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,7 +26,7 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     - name: Scan Docker image
-      run: trivy devsecops-testing
+      run: trivy image devsecops-testing
 
     - name: Push Docker image to Docker Hub
       run: |
